little-gui-helper.properties/doprops: changed syntax of unrolling parameters from (& 1 2 3) to ^unroll (1 2 3)

--- a/TODO.org
+++ b/TODO.org
@@ -4,5 +4,5 @@
    (any Named object is treated that way)
 ** TODO doprops: consider renaming
    setprops, set-properties
-** TODO doprops: consider replacing (& ...) construct with some annotation (metadata)
-   ^:multi ?
+** DONE doprops: consider replacing (& ...) construct with some annotation (metadata)
+   ^unroll ?
