--- a/TODO.org
+++ b/TODO.org
@@ -1,3 +1,6 @@
+* Project
+** TODO consider renaming
+   - Difference
 * little-gui-helper/properties.clj
 ** DONE setter-name: translate keywords
    Translate keywords from :camel-case-property -> .setCamelCaseProperty
